--- a/package.json
+++ b/package.json
@@ -19,9 +19,15 @@
   },
   "homepage": "https://github.com/hanh18/Mii-Website#readme",
   "dependencies": {
-    "express": "^4.18.1"
+    "cookie-parser": "^1.4.6",
+    "dotenv": "^16.0.1",
+    "ejs": "^3.1.8",
+    "express": "^4.18.1",
+    "method-override": "^3.0.0",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "eslint": "^8.19.0",
     "nodemon": "^2.0.18"
   }
 }
