--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint": "^8.19.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
-    "nodemon": "^2.0.18"
+    "nodemon": "^2.0.18",
+    "prisma": "^4.0.0"
   }
 }
