--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
   "homepage": "https://github.com/hanh18/Mii-Website#readme",
   "dependencies": {
     "@prisma/client": "^4.0.0",
+    "apollo-server-express": "^3.9.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
+    "graphql": "^16.5.0",
     "method-override": "^3.0.0",
     "morgan": "^1.10.0"
   },
