done API admin/category

--- a/.env
+++ b/.env
@@ -8,3 +8,7 @@ PORT=8000
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mysql://root:hanhha@localhost:3306/mii-project"
+
+CLOUDINARY_NAME="hhanh"
+CLOUDINARY_API_KEY="279172766556815"
+CLOUDINARY_API_SECRET="clPpvHsjxHgAeNT9iYK14klu9PQ"
