--- a/package.json
+++ b/package.json
@@ -25,13 +25,16 @@
     "@prisma/client": "^4.0.0",
     "apollo-server-express": "^3.9.0",
     "bcrypt": "^5.0.1",
+    "cloudinary": "^1.30.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "graphql": "^16.5.0",
     "method-override": "^3.0.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0"
   },
   "devDependencies": {
     "eslint": "^8.19.0",
