--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/hanh18/Mii-Website#readme",
   "dependencies": {
     "@prisma/client": "^4.0.0",
+    "@quixo3/prisma-session-store": "^3.1.8",
     "apollo-server-express": "^3.9.0",
     "bcrypt": "^5.0.1",
     "cloudinary": "^1.30.0",
@@ -30,6 +31,7 @@
     "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
+    "express-session": "^1.17.3",
     "graphql": "^16.5.0",
     "method-override": "^3.0.0",
     "morgan": "^1.10.0",
