--- a/.env
+++ b/.env
@@ -12,3 +12,5 @@ DATABASE_URL="mysql://root:hanhha@localhost:3306/mii-project"
 CLOUDINARY_NAME="hhanh"
 CLOUDINARY_API_KEY="279172766556815"
 CLOUDINARY_API_SECRET="clPpvHsjxHgAeNT9iYK14klu9PQ"
+
+SECRET_KEY="secretzn"
