--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "express": "^4.18.1",
     "express-session": "^1.17.3",
     "graphql": "^16.5.0",
+    "jsonwebtoken": "^8.5.1",
     "method-override": "^3.0.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
