done API register and fix API login

--- a/.env
+++ b/.env
@@ -14,3 +14,7 @@ CLOUDINARY_API_KEY="279172766556815"
 CLOUDINARY_API_SECRET="clPpvHsjxHgAeNT9iYK14klu9PQ"
 
 SECRET_KEY="secretzn"
+
+MAILTRAP_USER="c4238bd2e0c21a"
+MAILTRAP_PASS="65e5d779111513"
+MAIL_ADMIN="ng.huyen102080@gmail.com"
