--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "method-override": "^3.0.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "multer-storage-cloudinary": "^4.0.0"
+    "multer-storage-cloudinary": "^4.0.0",
+    "nodemailer": "^6.7.7"
   },
   "devDependencies": {
     "eslint": "^8.19.0",
