--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
-    "nodemailer": "^6.7.7"
+    "nodemailer": "^6.7.7",
+    "streamifier": "^0.1.1"
   },
   "devDependencies": {
     "eslint": "^8.19.0",
